--- a/supabase/functions/protocol-analysis/deno.json
+++ b/supabase/functions/protocol-analysis/deno.json
@@ -1,5 +1,9 @@
 {
   "imports": {
-    "@supabase/functions-js": "jsr:@supabase/functions-js@^2"
+    "@supabase/functions-js": "jsr:@supabase/functions-js@^2",
+    "openai": "npm:openai@4.52.0"
+  },
+  "compilerOptions": {
+    "lib": ["deno.ns", "deno.window"]
   }
 }
